--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -52,8 +52,8 @@
         android:id="@+id/profileText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toEndOf="@id/settings"
-        app:layout_constraintEnd_toStartOf="@id/editProfile"
+        app:layout_constraintStart_toEndOf="@id/margin_profile1"
+        app:layout_constraintEnd_toStartOf="@id/margin_profile2"
         app:layout_constraintTop_toTopOf="@id/settings"
         app:layout_constraintBottom_toBottomOf="@id/settings"
         android:text="@string/profile"
@@ -67,7 +67,7 @@
         app:layout_constraintStart_toEndOf="@id/margin_profile1"
         app:layout_constraintEnd_toStartOf="@id/margin_profile2"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="90dp"
+        android:layout_marginTop="100dp"
         android:src="@drawable/profile_image_big"
         android:background="@android:color/transparent"
         />
@@ -79,17 +79,19 @@
         app:layout_constraintStart_toStartOf="@id/margin_profile1"
         app:layout_constraintEnd_toEndOf="@id/margin_profile2"
         app:layout_constraintTop_toBottomOf="@id/profileImage"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="26dp"
         android:src="@drawable/medicinies_nutrition_box"
         />
 
     <EditText
+        style="@style/tint1"
         android:id="@+id/nameText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         app:layout_constraintStart_toStartOf="@id/boxName"
         app:layout_constraintTop_toTopOf="@id/boxName"
         app:layout_constraintBottom_toBottomOf="@id/boxName"
+        app:layout_constraintEnd_toEndOf="@id/boxName"
         android:hint="@string/name"
         android:textColor="@color/tint_color"
         android:background="@android:color/transparent"
@@ -103,17 +105,19 @@
         app:layout_constraintStart_toStartOf="@id/margin_profile1"
         app:layout_constraintEnd_toEndOf="@id/margin_profile2"
         app:layout_constraintTop_toBottomOf="@id/boxName"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="16dp"
         android:src="@drawable/medicinies_nutrition_box"
         />
 
     <EditText
+        style="@style/tint1"
         android:id="@+id/ageText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         app:layout_constraintStart_toStartOf="@id/boxAge"
         app:layout_constraintTop_toTopOf="@id/boxAge"
         app:layout_constraintBottom_toBottomOf="@id/boxAge"
+        app:layout_constraintEnd_toEndOf="@id/boxAge"
         android:hint="@string/age"
         android:textColor="@color/tint_color"
         android:background="@android:color/transparent"
@@ -126,17 +130,19 @@
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="@id/boxAge"
         app:layout_constraintTop_toBottomOf="@id/boxAge"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="16dp"
         android:src="@drawable/height_weight_box"
         />
 
     <EditText
+        style="@style/tint1"
         android:id="@+id/heightText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         app:layout_constraintStart_toStartOf="@id/boxHeight"
         app:layout_constraintTop_toTopOf="@id/boxHeight"
         app:layout_constraintBottom_toBottomOf="@id/boxHeight"
+        app:layout_constraintEnd_toEndOf="@id/boxHeight"
         android:hint="@string/height"
         android:textColor="@color/tint_color"
         android:background="@android:color/transparent"
@@ -149,17 +155,19 @@
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="@id/boxAge"
         app:layout_constraintTop_toBottomOf="@id/boxAge"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="16dp"
         android:src="@drawable/height_weight_box"
         />
 
     <EditText
+        style="@style/tint1"
         android:id="@+id/weightText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         app:layout_constraintStart_toStartOf="@id/boxWeight"
         app:layout_constraintTop_toTopOf="@id/boxWeight"
         app:layout_constraintBottom_toBottomOf="@id/boxWeight"
+        app:layout_constraintEnd_toEndOf="@id/boxWeight"
         android:hint="@string/weight"
         android:textColor="@color/tint_color"
         android:background="@android:color/transparent"
