--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -1,13 +1,175 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.settingsFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".view.settingsFragment"
+    android:background="@drawable/background"
+    >
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/margin_profile1"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="20dp"
+        />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/margin_profile2"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        app:layout_constraintGuide_end="20dp"
+        />
+
+    <ImageButton
+        android:id="@+id/settings"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="@id/margin_profile1"
+        app:layout_constraintTop_toTopOf="parent"
+        android:src="@drawable/settings"
+        android:background="@android:color/transparent"
+        android:layout_marginTop="30dp"
+        android:layout_marginStart="5dp"
+        />
+
+    <ImageButton
+        android:id="@+id/profileMini"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="@id/margin_profile2"
+        app:layout_constraintTop_toTopOf="parent"
+        android:src="@drawable/icon_profile"
+        android:background="@android:color/transparent"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="5dp"
+        />
 
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Hello" />
+        style="@style/zagalovok1"
+        android:id="@+id/settingsText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="@id/margin_profile1"
+        app:layout_constraintEnd_toEndOf="@id/margin_profile2"
+        app:layout_constraintTop_toTopOf="@id/settings"
+        app:layout_constraintBottom_toBottomOf="@id/settings"
+        android:text="@string/settings"
+        android:textColor="@color/textcolor_black"
+        />
 
-</FrameLayout>
+    <ImageView
+        android:id="@+id/box"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="@id/margin_profile1"
+        app:layout_constraintEnd_toEndOf="@id/margin_profile2"
+        app:layout_constraintTop_toTopOf="parent"
+        android:src="@drawable/settings_box"
+        android:layout_marginTop="132dp"
+        />
+
+    <ImageView
+        android:id="@+id/checkboxWeight"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="@id/box"
+        app:layout_constraintTop_toTopOf="@id/box"
+        android:src="@drawable/checkbox"
+        android:background="@android:color/transparent"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="23dp"
+        />
+
+    <TextView
+        style="@style/zagalovok2"
+        android:id="@+id/weightText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toEndOf="@id/checkboxWeight"
+        app:layout_constraintTop_toTopOf="@id/checkboxWeight"
+        app:layout_constraintBottom_toBottomOf="@id/checkboxWeight"
+        android:text="@string/weight"
+        android:textColor="@color/textcolor_black"
+        android:layout_marginStart="13dp"
+        />
+
+    <ImageView
+        android:id="@+id/checkboxSleep"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="@id/box"
+        app:layout_constraintTop_toBottomOf="@id/checkboxWeight"
+        android:src="@drawable/checkbox"
+        android:background="@android:color/transparent"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="46dp"
+        />
+
+    <TextView
+        style="@style/zagalovok2"
+        android:id="@+id/sleepText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toEndOf="@id/checkboxSleep"
+        app:layout_constraintTop_toTopOf="@id/checkboxSleep"
+        app:layout_constraintBottom_toBottomOf="@id/checkboxSleep"
+        android:text="@string/sleep"
+        android:textColor="@color/textcolor_black"
+        android:layout_marginStart="13dp"
+        />
+
+    <ImageView
+        android:id="@+id/checkboxCardio"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="@id/box"
+        app:layout_constraintTop_toBottomOf="@id/checkboxSleep"
+        android:src="@drawable/checkbox"
+        android:background="@android:color/transparent"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="46dp"
+        />
+
+    <TextView
+        style="@style/zagalovok2"
+        android:id="@+id/cardioText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toEndOf="@id/checkboxCardio"
+        app:layout_constraintTop_toTopOf="@id/checkboxCardio"
+        app:layout_constraintBottom_toBottomOf="@id/checkboxCardio"
+        android:text="@string/cardio"
+        android:textColor="@color/textcolor_black"
+        android:layout_marginStart="13dp"
+        />
+
+    <ImageView
+        android:id="@+id/checkboxMedecines"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="@id/box"
+        app:layout_constraintTop_toBottomOf="@id/checkboxCardio"
+        android:src="@drawable/checkbox"
+        android:background="@android:color/transparent"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="46dp"
+        />
+
+    <TextView
+        style="@style/zagalovok2"
+        android:id="@+id/medecineText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toEndOf="@id/checkboxMedecines"
+        app:layout_constraintTop_toTopOf="@id/checkboxMedecines"
+        app:layout_constraintBottom_toBottomOf="@id/checkboxMedecines"
+        android:text="@string/taking_pills"
+        android:textColor="@color/textcolor_black"
+        android:layout_marginStart="13dp"
+        />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
