--- a/app/src/main/res/layout/fragment_sleep.xml
+++ b/app/src/main/res/layout/fragment_sleep.xml
@@ -13,7 +13,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:orientation="vertical"
-        app:layout_constraintGuide_begin="20dp"
+        app:layout_constraintGuide_begin="22dp"
         />
 
     <androidx.constraintlayout.widget.Guideline
@@ -21,7 +21,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:orientation="vertical"
-        app:layout_constraintGuide_end="20dp"
+        app:layout_constraintGuide_end="22dp"
         />
 
     <ImageButton
@@ -59,14 +59,75 @@
         android:textColor="@color/textcolor_black"
         />
 
+    <TextView
+        style="@style/zagalovok1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toEndOf="@id/margin_s"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="99dp"
+        android:text="@string/how_long_sleep"
+        android:textColor="@color/textcolor_black"
+        />
+
+    <ImageButton
+        android:id="@+id/sleep1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toEndOf="@id/margin_s"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="150dp"
+        android:src="@drawable/how_much_sleep"
+        android:background="@android:color/transparent"
+        />
+    
+    <EditText
+        style="@style/tint1"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="@id/sleep1"
+        app:layout_constraintEnd_toEndOf="@id/sleep1"
+        app:layout_constraintBottom_toBottomOf="@id/sleep1"
+        app:layout_constraintStart_toStartOf="@id/sleep1"
+        android:paddingStart="10dp"
+        android:hint="@string/start_sleep"
+        android:textColor="@color/tint_color"
+        android:background="@android:color/transparent"
+        />
+
+    <ImageButton
+        android:id="@+id/sleep2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toStartOf="@id/margin_e"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="150dp"
+        android:src="@drawable/how_much_sleep"
+        android:background="@android:color/transparent"
+        />
+
     <ImageView
         android:id="@+id/box1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toEndOf="@id/margin_s"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="244dp"
         android:src="@drawable/sleep_box"
+        />
+
+    <EditText
+        style="@style/tint1"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="@id/sleep2"
+        app:layout_constraintEnd_toEndOf="@id/sleep2"
+        app:layout_constraintBottom_toBottomOf="@id/sleep2"
+        app:layout_constraintStart_toStartOf="@id/sleep2"
+        android:paddingStart="10dp"
+        android:hint="@string/wakeup"
+        android:textColor="@color/tint_color"
+        android:background="@android:color/transparent"
         />
 
     <TextView
@@ -111,7 +172,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toStartOf="@id/margin_e"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="244dp"
         android:src="@drawable/sleep_box"
         />
 
@@ -157,7 +218,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toEndOf="@id/margin_s"
-        android:layout_marginTop="245dp"
+        android:layout_marginTop="403dp"
         android:text="@string/total_sleeptime"
         android:textColor="@color/textcolor_black"
         />
@@ -169,7 +230,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toEndOf="@id/margin_s"
         app:layout_constraintEnd_toStartOf="@id/margin_e"
-        android:layout_marginTop="294dp"
+        android:layout_marginTop="457dp"
         android:src="@drawable/sleeplayout_background"
         />
 
