--- a/app/src/main/res/layout/fragment_steps.xml
+++ b/app/src/main/res/layout/fragment_steps.xml
@@ -4,42 +4,457 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".view.StepsFragment"
-    android:background="@drawable/background">
+    tools:context=".view.StartFragment"
+    android:background="@drawable/background"
+    >
 
-    <ImageView
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/margin_s"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="22dp"
+        />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/margin_e"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        app:layout_constraintGuide_end="22dp"
+        />
+
+    <ImageButton
         android:id="@+id/settings"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        android:background="@android:color/transparent"
         android:src="@drawable/settings"
-        android:layout_marginTop="30dp"
-        android:layout_marginStart="25dp"
-        />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toEndOf="@id/settings"
-        app:layout_constraintEnd_toStartOf="@id/profile"
-        app:layout_constraintTop_toTopOf="@id/settings"
-        app:layout_constraintBottom_toBottomOf="@id/profile"
-        android:text="Шаги"
+        android:layout_marginStart="27dp"
+        android:layout_marginTop="33dp"
         />
 
     <ImageButton
         android:id="@+id/profile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/icon_profile"
+        android:layout_marginEnd="27dp"
+        android:layout_marginTop="33dp"
         android:background="@android:color/transparent"
+        android:src="@drawable/icon_profile"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="30dp"
-        android:layout_marginEnd="25dp"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        style="@style/zagalovok1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toEndOf="@id/settings"
+        app:layout_constraintEnd_toStartOf="@id/profile"
+        app:layout_constraintTop_toTopOf="@id/settings"
+        app:layout_constraintBottom_toBottomOf="@id/settings"
+        android:text="@string/steps"
+        android:textColor="@color/textcolor_black"
         />
 
+    <ImageButton
+        android:id="@+id/stepsBox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toEndOf="@id/margin_s"
+        app:layout_constraintTop_toTopOf="parent"
+        android:src="@drawable/weight_steps_box"
+        android:background="@android:color/transparent"
+        android:layout_marginTop="110dp"
+        />
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="@id/stepsBox"
+        app:layout_constraintTop_toTopOf="@id/stepsBox"
+        android:src="@drawable/steps_icon"
+        android:layout_marginTop="7dp"
+        android:layout_marginEnd="7dp"
+        />
+
+    <TextView
+        style="@style/zagalovok1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="@id/stepsBox"
+        app:layout_constraintTop_toTopOf="@id/stepsBox"
+        android:text="@string/steps"
+        android:layout_marginStart="7dp"
+        android:layout_marginTop="7dp"
+        />
+
+    <ImageView
+        android:id="@+id/stepsDiagram"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="@id/stepsBox"
+        app:layout_constraintEnd_toEndOf="@id/stepsBox"
+        app:layout_constraintTop_toTopOf="@id/stepsBox"
+        app:layout_constraintBottom_toBottomOf="@id/stepsBox"
+        android:src="@drawable/diagram_cycle"
+        />
+    <TextView
+        style="@style/diagramsDigitsStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="@id/stepsDiagram"
+        app:layout_constraintEnd_toEndOf="@id/stepsDiagram"
+        app:layout_constraintBottom_toBottomOf="@id/stepsDiagram"
+        app:layout_constraintTop_toTopOf="@id/stepsDiagram"
+        android:text="0"
+        android:layout_marginBottom="15dp"
+        />
+
+    <TextView
+        style="@style/diagramsTextStyle"
+        android:layout_width="40dp"
+        android:layout_height="36dp"
+        app:layout_constraintStart_toStartOf="@id/stepsDiagram"
+        app:layout_constraintEnd_toEndOf="@id/stepsDiagram"
+        app:layout_constraintBottom_toBottomOf="@id/stepsDiagram"
+        app:layout_constraintTop_toTopOf="@id/stepsDiagram"
+        android:layout_marginTop="38dp"
+        android:gravity="center"
+        android:text="@string/total_steps"
+        />
+
+    <TextView
+        style="@style/zagalovok3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="@id/stepsBox"
+        app:layout_constraintStart_toStartOf="@id/stepsBox"
+        android:layout_marginStart="7dp"
+        android:layout_marginBottom="8dp"
+        android:text="@string/week"
+        android:textColor="@color/textcolor_black"
+        />
+
+    <ImageButton
+        android:id="@+id/stepsBox1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toStartOf="@id/margin_e"
+        app:layout_constraintTop_toTopOf="parent"
+        android:src="@drawable/weight_steps_box"
+        android:background="@android:color/transparent"
+        android:layout_marginTop="110dp"
+        />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="@id/stepsBox1"
+        app:layout_constraintTop_toTopOf="@id/stepsBox1"
+        android:src="@drawable/steps_icon"
+        android:layout_marginTop="7dp"
+        android:layout_marginEnd="7dp"
+        />
+
+    <TextView
+        style="@style/zagalovok1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="@id/stepsBox1"
+        app:layout_constraintTop_toTopOf="@id/stepsBox1"
+        android:text="@string/steps"
+        android:layout_marginStart="7dp"
+        android:layout_marginTop="7dp"
+        />
+
+    <ImageView
+        android:id="@+id/stepsDiagram1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="@id/stepsBox1"
+        app:layout_constraintEnd_toEndOf="@id/stepsBox1"
+        app:layout_constraintTop_toTopOf="@id/stepsBox1"
+        app:layout_constraintBottom_toBottomOf="@id/stepsBox1"
+        android:src="@drawable/diagram_cycle"
+        />
+    <TextView
+        style="@style/diagramsDigitsStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="@id/stepsDiagram1"
+        app:layout_constraintEnd_toEndOf="@id/stepsDiagram1"
+        app:layout_constraintBottom_toBottomOf="@id/stepsDiagram1"
+        app:layout_constraintTop_toTopOf="@id/stepsDiagram1"
+        android:text="0"
+        android:layout_marginBottom="15dp"
+        />
+
+    <TextView
+        style="@style/diagramsTextStyle"
+        android:layout_width="40dp"
+        android:layout_height="36dp"
+        app:layout_constraintStart_toStartOf="@id/stepsDiagram1"
+        app:layout_constraintEnd_toEndOf="@id/stepsDiagram1"
+        app:layout_constraintBottom_toBottomOf="@id/stepsDiagram1"
+        app:layout_constraintTop_toTopOf="@id/stepsDiagram1"
+        android:layout_marginTop="38dp"
+        android:gravity="center"
+        android:text="@string/total_steps"
+        />
+
+    <TextView
+        style="@style/zagalovok3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="@id/stepsBox1"
+        app:layout_constraintStart_toStartOf="@id/stepsBox1"
+        android:layout_marginStart="7dp"
+        android:layout_marginBottom="8dp"
+        android:text="@string/month"
+        android:textColor="@color/textcolor_black"
+        />
+
+    <TextView
+        style="@style/zagalovok1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toEndOf="@id/margin_s"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="312dp"
+        android:text="@string/measurements"
+        android:textColor="@color/textcolor_black"
+        />
+
+    <ImageButton
+        android:id="@+id/steps_today"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toEndOf="@id/margin_s"
+        android:layout_marginTop="355dp"
+        android:src="@drawable/choose_ur_target"
+        android:background="@android:color/transparent"
+        />
+
+    <EditText
+        style="@style/tint1"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintStart_toStartOf="@id/steps_today"
+        app:layout_constraintTop_toTopOf="@id/steps_today"
+        app:layout_constraintBottom_toBottomOf="@id/steps_today"
+        app:layout_constraintEnd_toEndOf="@id/steps_today"
+        android:hint="@string/input_steps"
+        android:textColor="@color/tint_color"
+        android:background="@android:color/transparent"
+        android:paddingStart="10dp"
+        />
+
+    <TextView
+        style="@style/zagalovok1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toEndOf="@id/margin_s"
+        android:layout_marginTop="440dp"
+        android:text="@string/select_target"
+        android:textColor="@color/textcolor_black"
+        />
+
+    <ImageButton
+        android:id="@+id/st5000"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toEndOf="@id/margin_s"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="488dp"
+        android:src="@drawable/steps5000"
+        android:background="@android:color/transparent"
+        />
+
+    <TextView
+        style="@style/zagalovok3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="@id/st5000"
+        app:layout_constraintBottom_toBottomOf="@id/st5000"
+        app:layout_constraintStart_toStartOf="@id/st5000"
+        app:layout_constraintEnd_toEndOf="@id/st5000"
+        android:text="@string/steps5000"
+        android:textColor="@color/textcolor_black"
+        />
+
+    <ImageButton
+        android:id="@+id/st15000"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toStartOf="@id/margin_e"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="488dp"
+        android:src="@drawable/steps15000"
+        android:background="@android:color/transparent"
+        />
+
+    <TextView
+        style="@style/zagalovok3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="@id/st15000"
+        app:layout_constraintBottom_toBottomOf="@id/st15000"
+        app:layout_constraintStart_toStartOf="@id/st15000"
+        app:layout_constraintEnd_toEndOf="@id/st15000"
+        android:text="@string/steps15000"
+        android:textColor="@color/textcolor_black"
+        />
+
+    <ImageButton
+        android:id="@+id/st10000"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toEndOf="@id/st5000"
+        app:layout_constraintEnd_toStartOf="@id/st15000"
+        app:layout_constraintTop_toTopOf="@id/st5000"
+        app:layout_constraintBottom_toBottomOf="@id/st5000"
+        android:src="@drawable/steps10000"
+        android:background="@android:color/transparent"
+        />
+
+    <TextView
+        style="@style/zagalovok3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="@id/st10000"
+        app:layout_constraintBottom_toBottomOf="@id/st10000"
+        app:layout_constraintStart_toStartOf="@id/st10000"
+        app:layout_constraintEnd_toEndOf="@id/st10000"
+        android:text="@string/steps10000"
+        android:textColor="@color/textcolor_white"
+        />
+
+    <ImageButton
+        android:id="@+id/target"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toEndOf="@id/margin_s"
+        android:layout_marginTop="558dp"
+        android:src="@drawable/choose_ur_target"
+        android:background="@android:color/transparent"
+        />
+
+    <EditText
+        style="@style/tint1"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintStart_toStartOf="@id/target"
+        app:layout_constraintTop_toTopOf="@id/target"
+        app:layout_constraintBottom_toBottomOf="@id/target"
+        app:layout_constraintEnd_toEndOf="@id/target"
+        android:hint="@string/input_target"
+        android:textColor="@color/tint_color"
+        android:background="@android:color/transparent"
+        android:paddingStart="10dp"
+        />
+
+    <TextView
+        style="@style/zagalovok1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toEndOf="@id/margin_s"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="646dp"
+        android:text="@string/calories_burned"
+        android:textColor="@color/textcolor_black"
+        />
+
+    <ImageView
+        android:id="@+id/cal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toEndOf="@id/margin_s"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="700dp"
+        android:src="@drawable/calories"
+        android:background="@android:color/transparent"
+        />
+
+    <TextView
+        android:id="@+id/day"
+        style="@style/zagalovok2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="@id/cal"
+        app:layout_constraintStart_toStartOf="@id/cal"
+        android:layout_marginTop="23dp"
+        android:layout_marginStart="22dp"
+        android:text="@string/per_day"
+        android:textColor="@color/textcolor_black"
+        />
+
+    <TextView
+        android:id="@+id/month"
+        style="@style/zagalovok2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="@id/cal"
+        app:layout_constraintStart_toStartOf="@id/cal"
+        android:layout_marginBottom="23dp"
+        android:layout_marginStart="22dp"
+        android:text="@string/per_month"
+        android:textColor="@color/textcolor_black"
+        />
+
+    <TextView
+        style="@style/zagalovok2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/day"
+        app:layout_constraintBottom_toTopOf="@id/month"
+        app:layout_constraintStart_toStartOf="@id/cal"
+        android:layout_marginStart="22dp"
+        android:text="@string/per_week"
+        android:textColor="@color/textcolor_black"
+        />
+
+    <TextView
+        android:id="@+id/day_cal"
+        style="@style/zagalovok2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="@id/cal"
+        app:layout_constraintEnd_toEndOf="@id/cal"
+        android:layout_marginTop="23dp"
+        android:layout_marginEnd="40dp"
+        android:text="xxx калорий"
+        android:textColor="@color/tint_color"
+        />
+
+    <TextView
+        android:id="@+id/month_cal"
+        style="@style/zagalovok2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="@id/cal"
+        app:layout_constraintEnd_toEndOf="@id/cal"
+        android:layout_marginBottom="23dp"
+        android:layout_marginEnd="40dp"
+        android:text="xxx калорий"
+        android:textColor="@color/tint_color"
+        />
+
+    <TextView
+        style="@style/zagalovok2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/day_cal"
+        app:layout_constraintBottom_toTopOf="@id/month_cal"
+        app:layout_constraintEnd_toEndOf="@id/cal"
+        android:layout_marginEnd="40dp"
+        android:text="xxx калорий"
+        android:textColor="@color/tint_color"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
