--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -15,16 +15,19 @@
     <style name="zagalovok1">
         <item name="fontFamily">@font/inter_semibold</item>
         <item name="android:textSize">24sp</item>
+        <item name="android:textColor">@color/textcolor_black</item>
     </style>
 
     <style name="zagalovok2">
         <item name="fontFamily">@font/inter_semibold</item>
         <item name="android:textSize">20sp</item>
+        <item name="android:textColor">@color/textcolor_black</item>
     </style>
 
     <style name="zagalovok3">
         <item name="fontFamily">@font/inter_medium</item>
         <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/textcolor_black</item>
     </style>
 
     <style name="diagramsDigitsStyle">
