--- a/app/src/main/res/layout/fragment_main_3.xml
+++ b/app/src/main/res/layout/fragment_main_3.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".mainFragment3">
+    tools:context=".view.mainFragment3">
 
     <ImageButton
         android:id="@+id/stepsBox"
