--- a/app/src/main/res/layout/fragment_steps.xml
+++ b/app/src/main/res/layout/fragment_steps.xml
@@ -8,53 +8,38 @@
     android:background="@drawable/background"
     >
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/margin_s"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:orientation="vertical"
-        app:layout_constraintGuide_begin="22dp"
-        />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/margin_e"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:orientation="vertical"
-        app:layout_constraintGuide_end="22dp"
-        />
-
     <ImageButton
-        android:id="@+id/settings"
+        android:id="@+id/wentBack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:background="@android:color/transparent"
-        android:src="@drawable/settings"
-        android:layout_marginStart="27dp"
-        android:layout_marginTop="33dp"
+        android:src="@drawable/arrow_left"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="30dp"
         />
 
     <ImageButton
         android:id="@+id/profile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="27dp"
-        android:layout_marginTop="33dp"
+        android:layout_marginEnd="25dp"
+        android:layout_marginTop="30dp"
         android:background="@android:color/transparent"
         android:src="@drawable/icon_profile"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        />
 
     <TextView
         style="@style/zagalovok1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toEndOf="@id/settings"
+        app:layout_constraintStart_toEndOf="@id/wentBack"
         app:layout_constraintEnd_toStartOf="@id/profile"
-        app:layout_constraintTop_toTopOf="@id/settings"
-        app:layout_constraintBottom_toBottomOf="@id/settings"
+        app:layout_constraintTop_toTopOf="@id/wentBack"
+        app:layout_constraintBottom_toBottomOf="@id/wentBack"
         android:text="@string/steps"
         android:textColor="@color/textcolor_black"
         />
@@ -63,8 +48,9 @@
         android:id="@+id/stepsBox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toEndOf="@id/margin_s"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/stepsBox1"
         android:src="@drawable/weight_steps_box"
         android:background="@android:color/transparent"
         android:layout_marginTop="110dp"
@@ -142,7 +128,8 @@
         android:id="@+id/stepsBox1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintEnd_toStartOf="@id/margin_e"
+        app:layout_constraintStart_toEndOf="@id/stepsBox"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:src="@drawable/weight_steps_box"
         android:background="@android:color/transparent"
@@ -219,9 +206,10 @@
 
     <TextView
         style="@style/zagalovok1"
+        android:id="@+id/measurements"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toEndOf="@id/margin_s"
+        app:layout_constraintStart_toStartOf="@id/stepsBox"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="312dp"
         android:text="@string/measurements"
@@ -232,11 +220,12 @@
         android:id="@+id/steps_today"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toEndOf="@id/margin_s"
-        android:layout_marginTop="355dp"
+        app:layout_constraintTop_toBottomOf="@id/measurements"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         android:src="@drawable/choose_ur_target"
         android:background="@android:color/transparent"
+        android:layout_marginTop="5dp"
         />
 
     <EditText
@@ -255,11 +244,12 @@
 
     <TextView
         style="@style/zagalovok1"
+        android:id="@+id/selectTarget"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toEndOf="@id/margin_s"
-        android:layout_marginTop="440dp"
+        app:layout_constraintTop_toBottomOf="@id/steps_today"
+        app:layout_constraintStart_toStartOf="@id/stepsBox"
+        android:layout_marginTop="5dp"
         android:text="@string/select_target"
         android:textColor="@color/textcolor_black"
         />
@@ -268,9 +258,10 @@
         android:id="@+id/st5000"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toEndOf="@id/margin_s"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="488dp"
+        app:layout_constraintStart_toStartOf="@id/steps_today"
+        app:layout_constraintTop_toBottomOf="@id/selectTarget"
+        app:layout_constraintEnd_toStartOf="@id/st10000"
+        android:layout_marginTop="5dp"
         android:src="@drawable/steps5000"
         android:background="@android:color/transparent"
         />
@@ -284,29 +275,6 @@
         app:layout_constraintStart_toStartOf="@id/st5000"
         app:layout_constraintEnd_toEndOf="@id/st5000"
         android:text="@string/steps5000"
-        android:textColor="@color/textcolor_black"
-        />
-
-    <ImageButton
-        android:id="@+id/st15000"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toStartOf="@id/margin_e"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="488dp"
-        android:src="@drawable/steps15000"
-        android:background="@android:color/transparent"
-        />
-
-    <TextView
-        style="@style/zagalovok3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="@id/st15000"
-        app:layout_constraintBottom_toBottomOf="@id/st15000"
-        app:layout_constraintStart_toStartOf="@id/st15000"
-        app:layout_constraintEnd_toEndOf="@id/st15000"
-        android:text="@string/steps15000"
         android:textColor="@color/textcolor_black"
         />
 
@@ -335,14 +303,39 @@
         />
 
     <ImageButton
+        android:id="@+id/st15000"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toEndOf="@id/st10000"
+        app:layout_constraintEnd_toEndOf="@id/steps_today"
+        app:layout_constraintTop_toTopOf="@id/st10000"
+        app:layout_constraintBottom_toBottomOf="@id/st10000"
+        android:src="@drawable/steps15000"
+        android:background="@android:color/transparent"
+        />
+
+    <TextView
+        style="@style/zagalovok3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="@id/st15000"
+        app:layout_constraintBottom_toBottomOf="@id/st15000"
+        app:layout_constraintStart_toStartOf="@id/st15000"
+        app:layout_constraintEnd_toEndOf="@id/st15000"
+        android:text="@string/steps15000"
+        android:textColor="@color/textcolor_black"
+        />
+
+    <ImageButton
         android:id="@+id/target"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toEndOf="@id/margin_s"
-        android:layout_marginTop="558dp"
+        app:layout_constraintTop_toBottomOf="@id/st5000"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         android:src="@drawable/choose_ur_target"
         android:background="@android:color/transparent"
+        android:layout_marginTop="10dp"
         />
 
     <EditText
@@ -361,11 +354,12 @@
 
     <TextView
         style="@style/zagalovok1"
+        android:id="@+id/caloriesBurned"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toEndOf="@id/margin_s"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="646dp"
+        app:layout_constraintStart_toStartOf="@id/stepsBox"
+        app:layout_constraintTop_toBottomOf="@id/target"
+        android:layout_marginTop="5dp"
         android:text="@string/calories_burned"
         android:textColor="@color/textcolor_black"
         />
@@ -374,9 +368,10 @@
         android:id="@+id/cal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toEndOf="@id/margin_s"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="700dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/caloriesBurned"
+        android:layout_marginTop="5dp"
         android:src="@drawable/calories"
         android:background="@android:color/transparent"
         />
